--- a/index.html
+++ b/index.html
@@ -13,49 +13,55 @@
 
 </head>
 <body >
-    <h2 id="header">Tokyo, the capital of Japan.</h2>
-    
-    <img id ="headerPic" src="tokyo3.PNG" title="pic of tokyo" alt="tokyo pic">
-        
+    <div id="headerPart">
+        <h2 id="header">Tokyo, the capital of Japan.</h2>
+        <img id ="headerPic" src="tokyo3.PNG" title="pic of tokyo" alt="tokyo pic">
+    </div>
+
+    <div class="flex-container">
     <div id="rightSide">
 
-            <p id="searchText">search:</p>
+    <div class="search-container">
+        <p id="searchText">search:</p>
+        <input id="searchBox" type="search">
+    </div>
 
-            <input id="searchBox" type="search">
+        <h3 class="rightHeading"><i>click to see more details about tokyo:</i></h3>
 
-            <h3 class="rightHeading"><i>click to see more details about tokyo:</i></h3>
+        <ul class="list">
+            <li><a href="#history">history of Tokyo</a></li>
+            <li><a href="#table">Table of flags</a></li>
+            <li><a href="#video">small video</a></li>
+            <li><a href="#about">about Tokyo</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Tourism_in_Tokyo" target="_blank">tourism in tokyo</a></li>
+            <li><a href="https://travel.rakuten.com/campaign/ranking/cuisine/tokyo/" target="_blank">local food</a></li>
+        </ul>
 
-            <ul class="list">
-                <li><a href="#history">history of Tokyo</a></li>
-                <li><a href="#table">Table of flags</a></li>
-                <li><a href="#video">small video</a></li>
-                <li><a href="#about">about Tokyo</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Tourism_in_Tokyo" target="_blank">tourism in tokyo</a></li>
-                <li><a href="https://travel.rakuten.com/campaign/ranking/cuisine/tokyo/" target="_blank">local food</a></li>
-            </ul>
+        <div class="line"></div>
 
-            <div class="line"></div>
+        <h3 class="rightHeading"><i>Details About the City</i></h3>
 
-            <h3 class="rightHeading"><i>Details About the City</i></h3>
+        <ul class="list">
+            <li>street names</li>
+            <li>placement in country</li>
+            <li>safety</li>
+            <li>money in Tokyo</li>
+            <li>green parks</li>
+        </ul>
 
-            <ul class="list">
-                <li>street names</li>
-                <li>placement in country</li>
-                <li>safety</li>
-                <li>money in Tokyo</li>
-                <li>green parks</li>
-            </ul>
+        <div class="line"></div>
 
-            <div class="line"></div>
+        <h3 class="rightHeading"><i>write your ideas about Tokyo:</i></h3>
 
-            <h3 class="rightHeading"><i>write your ideas about Tokyo:</i></h3>
+            <textarea name="text1" rows="8" cols="30" style="margin-left: 17px;"></textarea>
 
-                <textarea name="text1" rows="8" cols="30" style="margin-left: 30px;"></textarea>
+            <img id="littlePic" src="tokyo5.jpg" alt="tokyo pic">
 
-                <img id="littlePic" src="tokyo5.jpg" alt="tokyo pic">
+    </div>
 
-        </div>
+    <div id="column"></div>
 
+    <div id="center">
         <h2>About Tokyo</h2>
 
         <p class="p p1">
@@ -134,7 +140,9 @@
             <video id="video" controls>
                 <source src="COM4134-F21- File.mp4" type="video/mp4">
             </video>
+        </div>
 
+    </div>
             <footer id="footer">
                 <p class="p_f">Thanks for visiting this page.</p>
                 <p class="p_f pf2">contact us via email or instagram </p>
